# ema-cloud-scanner

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Justfile  LICENSE  PRD.md  PROJECT_REVIEW.md  README.md  REVIEW.md  TODO.md  docker-compose.yml  pyproject.toml  run.py
.claude/: settings.json
.github/workflows/: ci.yml  docker-publish.yml
.serena/: project.yml
.serena/memories/: cli_preferences.md
docs/: ADVANCED_FEATURES.md  ALERTS.md  BACKTESTING.md  CLI_ADVANCED_FEATURES.md  CLI_REFERENCE.md  CLI_SETTINGS.md  CONFIGURATION_MANAGEMENT.md  HOLDINGS_SCANNING.md  INTERACTIVE_FEATURES.md  LOGGING.md  MONITORING.md  SECURITY.md  SIGNAL_MANAGEMENT.md
scripts/: README.md  test_alerts.py
src/ema_cloud_sector_scanner/: __init__.py  main.py  scanner.py
src/ema_cloud_sector_scanner/alerts/: __init__.py  handlers.py
src/ema_cloud_sector_scanner/backtesting/: __init__.py  engine.py
src/ema_cloud_sector_scanner/config/: __init__.py  settings.py
src/ema_cloud_sector_scanner/data_providers/: __init__.py  base.py
src/ema_cloud_sector_scanner/holdings/: __init__.py  manager.py  provider.py
src/ema_cloud_sector_scanner/indicators/: __init__.py  ema_cloud.py
src/ema_cloud_sector_scanner/signals/: __init__.py  generator.py
src/ema_cloud_sector_scanner/visualization/: __init__.py  dashboard.py
tests/: test_alerts.py  test_backtester.py  test_correctness_fixes.py  test_data_providers.py  test_holdings_scanner.py  test_indicators.py  test_market_hours.py  test_market_hours_indicator.py  test_mtf_analyzer.py  test_mtf_analyzer_additional.py  test_report_writer.py  test_scanner.py  test_signals.py  test_tier3_features.py
