[project]
name = "ema-cloud-sector-scanner"
version = "0.1.0"
description = "Real-time sector ETF scanner based on Ripster's EMA Cloud methodology"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "EMA Cloud Scanner" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
# Workspace packages as dependencies
dependencies = [
    "ema-cloud-lib",
    "ema-cloud-cli",
]

[tool.uv.sources]
ema-cloud-lib = { path = "packages/ema_cloud_lib", editable = true }
ema-cloud-cli = { path = "packages/ema_cloud_cli", editable = true }

[project.optional-dependencies]
alpaca = ["alpaca-py>=0.13.0"]
polygon = ["polygon-api-client>=1.12.0"]
notifications = ["plyer>=2.1.0"]
all = [
    "alpaca-py>=0.13.0",
    "polygon-api-client>=1.12.0",
    "plyer>=2.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
ema-scanner = "ema_cloud_cli.cli:run"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# No packages in root - all code is in packages/ subdirectory
[tool.setuptools]
packages = []

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["packages/ema_cloud_lib/src", "packages/ema_cloud_cli/src"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "src",  # Old source directory to be removed
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0911", # too many return statements
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLC0415", # import not at top level (intentional lazy imports)
    "SIM102",  # nested if statements (readability preference)
    "SIM117",  # nested with statements (readability preference)
    "RUF003",  # ambiguous unicode (intentional math symbols)
    "RUF012",  # mutable class attributes (dataclass pattern)
    "B904",    # exception chaining (minor in data providers)
    "PLW1510", # subprocess.run check (intentional for notifications)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__ files
"tests/*" = ["ARG", "PLR2004"]  # test files can have unused args and magic values
"*/terminal.py" = ["F401"]  # optional rich imports for feature detection
"*/scanner.py" = ["ARG001", "ERA001"]  # signal handler args, commented code

[tool.ruff.lint.isort]
known-first-party = ["ema_cloud_lib", "ema_cloud_cli"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
